--- a/Halloapp/tr.lproj/Localizable.strings
+++ b/Halloapp/tr.lproj/Localizable.strings
@@ -40,6 +40,9 @@
 /* First tab in the main app interface. */
 "activityCenter.promo.favorites" = "Yakınlar listesi özelliğini keşfet!";
 
+/* Title of a button to send a friend request. */
+"add.friend" = "Arkadaşı ekle";
+
 /* Title of a button that allows a location to be added. */
 "add.location.title" = "Konum ekle";
 
@@ -60,6 +63,9 @@
 
 /* Message to tell the user to try again when they have internet connectivity again */
 "alert.no.internet.try.again" = "Lütfen internet bağlantını kontrol et ve yeniden dene.";
+
+/* Indicating all pending friend requests. */
+"all.requests" = "İstekler";
 
 /* Title of the activity tab when contacts permissions aren't given. */
 "allow.contacts.for.activity" = "Arkadaşlarının güncellemelerini almak için kişi erişimine izin ver.";
@@ -105,6 +111,12 @@
 
 /* Text to show on banner when no connection is available */
 "banner.no.connection" = "İnternet bağlantısı yok";
+
+/* Success message displayed after blocking a user. */
+"block.success" = "Engellendi";
+
+/* Title of an alert when blocking a user. */
+"block.title" = "%@ kişisini engelle";
 
 /* Title for generic Add button. Used to add more items to current selection (e.g., add more members to a group) */
 "button.add" = "ekle";
@@ -294,6 +306,9 @@
 
 /* No comment provided by engineer. */
 "Cancel" = "İptal et";
+
+/* Title of a button to cancel a friendship request. */
+"cancel.request" = "İsteği iptal et";
 
 /* Text shown in the chat interface informing the user that the contact is blocked */
 "chat.blocked.contact.label" = "Bu kişiyi engelledin";
@@ -523,6 +538,9 @@
 /* Prompts the user to choose a photo. */
 "choose.photo" = "Fotoğraf seç";
 
+/* Title of a button to close a screen. */
+"close.title" = "Kapat";
+
 /* Title for the button in comment deletion confirmation prompt. */
 "comment.delete.action" = "Yorumu sil";
 
@@ -571,6 +589,9 @@
 /* Title for alert when closing the post composer with a voice note */
 "composer.deletevoicenote.title" = "Gönderiyi sil?";
 
+/* Share to all friends */
+"composer.destination.friendsShare" = "Arkadaşlarım";
+
 /* Label above the list with whom you share */
 "composer.destinations.label" = "...ile paylaş";
 
@@ -615,6 +636,9 @@
 
 /* Show the user that the title is tappable */
 "composer.subtitle.cta" = "Değiştirmek için dokun";
+
+/* Title of a button to confirm a friend request. */
+"confirm.title" = "Kabul et";
 
 /* No comment provided by engineer. */
 "CONNECTION" = "BAĞLANTI";
@@ -859,6 +883,18 @@
 /* Possible Feed Privacy setting value. Keep short. */
 "feed.privacy.value.n.selected" = "feed.privacy.value.n.selected";
 
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.body.1" = "Etkileyicilerin ve reklamların olmadığı özel bir alan... Yalnızca sen ve sevdiklerin.";
+
+/* Body text of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.body.2" = "HalloApp'teki arkadaşların gönderilerini görebilir. Ağından kişileri arkadaşlarına ekle ve arkadaşlık isteklerini yönet.";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.title.1" = "Özel sosyal ağın HalloApp'e hoş geldin!";
+
+/* Title of welcome post shown to users who have no contacts and no content (zero zone) in their feed */
+"feed.welcome.post.title.2" = "Gönderilerimi kimler görebilir?";
+
 /* Text for 'more' cell prompting users to open the invite screen */
 "feedInviteCarousel.searchPrompt" = "Daha fazla arkadaş ve yakın ara";
 
@@ -877,8 +913,35 @@
 /* Explains that as more contacts join the app, they will appear in this list automatically. */
 "fellow.contacts.will.arrive" = "HalloApp'e kaydolan kişilerin burada otomatik olarak görünecek";
 
+/* Message displayed in the activity center when someone accepts your friend request. */
+"friend.activity.incoming.accepted" = "<$author$>, arkadaşlık isteğini kabul etti";
+
+/* Message displayed in the activity center when there's an incoming friend request. */
+"friend.activity.incoming.pending" = "<$author$>, sana arkadaşlık isteği gönderdi";
+
+/* Title of a header that appears before a list of contacts that can be invited to register. */
+"friend.invite.header.title" = "Burada başka ne görmek istersin?";
+
+/* Message explaining the new friend network. */
+"friend.migration.message" = "Artık HalloApp'teki kişileri, adlarını veya @kullanıcıadı yazarak aratabilirsin. Mevcut HalloApp kişilerin, arkadaşın oluyor. Kişilerini arkadaşlarından istediğin zaman silebilirsin. ";
+
+/* Title when explaining the new friend network. */
+"friend.migration.title" = "HalloApp'te yeni arkadaşlık modeli";
+
+/* Indicating friend requests */
+"friend.requests" = "Arkadaşlık istekleri";
+
+/* Indicating suggested friends. */
+"friend.suggestions" = "Arkadaş önerileri";
+
 /* Disclaimer telling users that their posts can be seen by their friends. */
 "friends.privacy.disclaimer" = "Eklediğin kişiler, arkadaşlarınla paylaştığın gönderileri görebilecek";
+
+/* Indicating the user's friends. */
+"friends.title" = "Arkadaşlar";
+
+/* When displaying a generic error message. */
+"generic.error" = "Bir hata oluştu";
 
 /* Placeholder text shown in group description input box when there's no description */
 "group.add.description" = "Grup açıklaması ekle";
@@ -1119,6 +1182,12 @@
 
 /* Title of failed video call screen alert. */
 "home.video.calls.fail.title" = "Görüntülü arama henüz desteklenmiyor.";
+
+/* Title of a button to ignore a friendship request. */
+"ignore.title" = "Görmezden gel";
+
+/* Message displayed next to an incoming friend request. */
+"incoming.friend.request.format" = "%@, sana arkadaşlık isteği gönderdi";
 
 /* Title of the bottom sheet that is presented only once to explain the moments feature. */
 "introducing.moments" = "Anlık tanıtımı";
@@ -1435,6 +1504,9 @@
 /* Title for alert that pops up when user attempts to save an empty contact list */
 "no.contact.selected" = "Kişi seçilmedi";
 
+/* Displayed when the user's friends list is empty. */
+"no.friends.message" = "Henüz HalloApp'te kimseyle bağlantın yok";
+
 /* Text shown to indicate user is not in the group anymore */
 "not.in.group.banner.text" = "Artık bu grupta değilsin";
 
@@ -1452,6 +1524,12 @@
 
 /* Title of the daily moment notification. */
 "notification.daily.moment.title" = "Günlük anlık";
+
+/* Body of a notification for when a friend request is accepted. */
+"notification.friend.request.accept.body" = "%@, arkadaşlık isteğini kabul etti";
+
+/* Body of a notification for a new friend request. */
+"notification.friend.request.body" = "%@, sana arkadaşlık isteği gönderdi";
 
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@, HalloApp'e katılma davetini kabul etti 🎉";
@@ -1579,11 +1657,35 @@
 /* Title denoting something that is optional. */
 "optional.title" = "Seçmeli";
 
+/* Message displayed next to an outgoing friend request. */
+"outgoing.friend.request.format" = "%@ kişisine arkadaşlık isteği gönderdin";
+
 /* button to launch photo and video library */
 "photo.and.video.library" = "Fotoğraf & Video Galerisi";
 
+/* fallback title for suggested photo album */
+"photoSuggestions.album.title" = "Önerilen";
+
 /* Button to link to settings to enable location permission for HalloApp */
 "photosuggestions.cta.alwaysonlocation.action" = "Ayarlardan izin ver";
+
+/* explanation of why we want always location access */
+"photosuggestions.cta.alwaysonlocation.subtitle" = "Yeni fotoğraflar çektiğinde en iyilerini seçip sana bir taslak sunarız. Böylece paylaşmak için hazır bir gönderi bulursun.";
+
+/* Button to link to settings to enable location permission for Photos app */
+"photosuggestions.cta.photolocation.action" = "Ayarları aç";
+
+/* instructions for enabling location access for photos app. maintain '*' to indicate bold text. */
+"photosuggestions.cta.photolocation.subtitle2" = "Konum erişimine izin vermek için *Ayarlar* > *Gizlilik ve Güvenlik* > *Konum Servisleri* > *Kamera*";
+
+/* title for explanation of why we want location access for photos app */
+"photosuggestions.cta.photolocation.title" = "Kamera için konum erişimine izin ver";
+
+/* Button to allow access to photos */
+"photosuggestions.emptystate.photopermission.action" = "İzin ver";
+
+/* explanation for photo suggestions */
+"photosuggestions.explainer.subtitle" = "Yeni fotoğraflar çektiğinde en iyilerini seçip sana bir taslak sunarız. Böylece paylaşmak için hazır bir gönderi bulursun.";
 
 /* title for photo suggestions section */
 "photosuggestionsheader.title" = "Yeni gönderi önerileri";
@@ -1840,6 +1942,15 @@
 /* Message shown to the user once they have successfully registered. */
 "registration.you.are.in" = "Giriş yaptın!";
 
+/* Title of a button to remove a friend. */
+"remove.friend" = "Arkadaşı sil";
+
+/* Body of an alert that appears when removing a friend. */
+"remove.friend.body" = "%@ ve sen, artık birbirinizin gönderilerini göremeyeceksiniz";
+
+/* Title of an alert that appears when removing a friend. */
+"remove.friend.title" = "%@ kişisini arkadaşlıktan çıkar";
+
 /* Text for the action of removing a contact from the user's favorites list (title case). */
 "remove.from.favorites.title" = "Yakınlardan çıkar";
 
@@ -1882,6 +1993,12 @@
 /* Title of the dialog that appears when reporting a user. */
 "report.user.title" = "%@ kişisini bildir";
 
+/* Format string to display how many incoming friend requests there are. */
+"requests.received" = "Gelen istekler (%d)";
+
+/* Indicating the user's friend requests. */
+"requests.title" = "İstekler";
+
 /* Instructions for how to use the safety number verification UI */
 "safety.number.instructions" = "%@ ile bağlantınızın güvenliğini doğrulamak için yukarıdaki numaraların, onun cihazında gösterilenlerle eşleşip eşleşmediğini kontrol et veya telefonundaki QR kodunu tarat.";
 
@@ -1905,6 +2022,15 @@
 
 /* Title of a button that displays all results. */
 "see.all" = "Hepsini gör";
+
+/* Title of a button that shows all friend requests. */
+"see.all.requests" = "Bütün istekleri gör";
+
+/* Title of a button that displays the users friend list. */
+"see.my.network" = "Ağımı göster";
+
+/* Title of a button that shows sent friend requests. */
+"see.sent.requests" = "Gönderilen istekler";
 
 /* Message that pops up when user attempts to save an empty contact list */
 "select.at.least.one.contact" = "Lütfen en az bir kişi seç";
@@ -2206,6 +2332,9 @@
 /* Instructs user to tap a button (e.g., Tap “Go to Settings” below.) */
 "tutorial.tap.below" = "Aşağıdaki “%@” butonuna bas";
 
+/* Title of an alert when unblocking a user */
+"unblock.title" = " %@ kişisinin engelini kaldır";
+
 /* Text for action label that lets the user accept messages from unknown contacts */
 "unknown.contact.accept.to.message" = "Mesajı kabul et";
 
@@ -2230,6 +2359,9 @@
 /* Option when user taps more on profile page */
 "user.option.block" = "HalloApp'te engelle";
 
+/* Option when User clicks on the username on profile page and this can let the user copy the username */
+"user.option.copy.username" = "Kullanıcı adını kopyala";
+
 /* Option when user taps more on profile page */
 "user.option.unblock" = "HalloApp'teki engeli kaldır";
 
@@ -2253,6 +2385,12 @@
 
 /* Text that indicates a view action. */
 "view.title" = "Gör";
+
+/* Body of notification that a user has a new sharing suggestion. '6 photos' */
+"visitTracker.notification.body.nolocation" = "%ld fotoğraf";
+
+/* Body of notification that a user has a new sharing suggestion. '6 photos from Terun' */
+"visitTracker.notification.body.withlocation" = "%2$@ kişisinden %1$ld fotoğraf";
 
 /* Title of notification that a user has a new sharing suggestion */
 "visitTracker.notification.title" = "Yeni paylaşım önerileri";
