--- a/Notification Service Extension/tr.lproj/Localizable.strings
+++ b/Notification Service Extension/tr.lproj/Localizable.strings
@@ -148,6 +148,12 @@
 /* Title of the daily moment notification. */
 "notification.daily.moment.title" = "Günlük anlık";
 
+/* Body of a notification for when a friend request is accepted. */
+"notification.friend.request.accept.body" = "%@, arkadaşlık isteğini kabul etti ";
+
+/* Body of a notification for a new friend request. */
+"notification.friend.request.body" = "%@, sana arkadaşlık isteği gönderdi";
+
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@, HalloApp davetini kabul etti 🎉";
 
