--- a/Notification Service Extension/de.lproj/Localizable.strings
+++ b/Notification Service Extension/de.lproj/Localizable.strings
@@ -89,13 +89,13 @@
 "Delete" = "Löschen";
 
 /* Describes what 'All Friends' feed privacy setting means. */
-"feed.privacy.descr.all" = "Mit all meinen Kontakten teilen";
+"feed.privacy.descr.all" = "Mit all meinen Freunden teilen";
 
 /* Describes what 'All Contacts' feed privacy setting means. */
 "feed.privacy.descr.except" = "Mit meinen Kontakten teilen außer Ausgewählten";
 
 /* Describes what 'Favorites' feed privacy setting means. */
-"feed.privacy.descr.only" = "Nur mit ausgewählten Kontakten teilen";
+"feed.privacy.descr.only" = "Nur mit ausgewählten Freunden teilen";
 
 /* Button to dismiss edit favorites modal */
 "feed.privacy.list.dismiss.edit.favorites" = "Jetzt nicht";
@@ -147,6 +147,12 @@
 
 /* Title of the daily moment notification. */
 "notification.daily.moment.title" = "Täglicher Moment";
+
+/* Body of a notification for when a friend request is accepted. */
+"notification.friend.request.accept.body" = "%@ hat deine Freundschaftsanfrage angenommen";
+
+/* Body of a notification for a new friend request. */
+"notification.friend.request.body" = "%@ hat dir eine Freundschaftsanfrage geschickt";
 
 /* Content for inviter notification. */
 "notification.invite.accepted.content" = "%@ hat deine HalloApp-Einladung angenommen 🎉";
